--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "main": "main.js",
   "repository": "git@github.com-coffeebrewapps:coffeebrewapps/triple_tee-source.git",
   "author": "Coffee Brew Apps <coffeebrewapps@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "electron ."
+  },
+  "devDependencies": {
+    "electron": "^24.1.3"
+  }
 }
