--- a/package.json
+++ b/package.json
@@ -7,12 +7,25 @@
   "author": "Coffee Brew Apps <coffeebrewapps@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "electron ."
+    "serve": "vite build --emptyOutDir client && electron .",
+    "client-dev": "vite client",
+    "client-build": "vite build --emptyOutDir client",
+    "client-preview": "vite preview client",
+    "client-test:unit": "vitest client"
   },
   "devDependencies": {
-    "electron": "^24.1.3"
+    "create-vue": "^3.6.1",
+    "electron": "^24.1.3",
+    "pinia": "^2.0.32",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.3.0",
+    "jsdom": "^21.1.0",
+    "vite": "^4.1.4",
+    "vitest": "^0.29.1"
   }
 }
