--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.3.0",
+    "axios": "^1.4.0",
     "coffeebrew_vue_components": "https://github.com/coffeebrewapps/coffeebrew_vue_components.git#feature/v0.1.0",
     "express": "^4.18.2",
     "jsdom": "^21.1.0",
