--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
   "author": "Coffee Brew Apps <coffeebrewapps@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "serve": "vite build --emptyOutDir client && electron .",
+    "serve": "vite build --emptyOutDir client && electron-forge start",
     "client-dev": "vite client",
     "client-build": "vite build --emptyOutDir client",
     "client-preview": "vite preview client",
-    "client-test:unit": "vitest client"
+    "client-test:unit": "vitest client",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.1.1",
+    "@electron-forge/maker-deb": "^6.1.1",
+    "@electron-forge/maker-rpm": "^6.1.1",
+    "@electron-forge/maker-squirrel": "^6.1.1",
+    "@electron-forge/maker-zip": "^6.1.1",
     "create-vue": "^3.6.1",
     "electron": "^24.1.3",
     "pinia": "^2.0.32",
@@ -25,6 +32,7 @@
     "@vue/test-utils": "^2.3.0",
     "axios": "^1.4.0",
     "coffeebrew_vue_components": "https://github.com/coffeebrewapps/coffeebrew_vue_components.git#feature/v0.1.0",
+    "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
     "jsdom": "^21.1.0",
     "vite": "^4.1.4",
