--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "vue-router": "^4.1.6"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.3.0",
+    "coffeebrew_vue_components": "https://github.com/coffeebrewapps/coffeebrew_vue_components.git#feature/v0.1.0",
+    "express": "^4.18.2",
     "jsdom": "^21.1.0",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
