--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "client-build": "vite build --emptyOutDir client",
     "client-preview": "vite preview client",
     "client-test:unit": "vitest client",
+    "build": "esbuild server.js --platform=node --bundle --minify --outfile=dist/server.js",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
@@ -23,6 +24,7 @@
     "@electron-forge/maker-zip": "^6.1.1",
     "create-vue": "^3.6.1",
     "electron": "^24.1.3",
+    "esbuild": "^0.17.18",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
