--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "author": "Coffee Brew Apps <coffeebrewapps@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "serve": "vite build --emptyOutDir client && electron-forge start",
+    "serve": "bin/serve",
     "client-dev": "vite client",
     "client-build": "vite build --emptyOutDir client",
     "client-preview": "vite preview client",
     "client-test:unit": "vitest client",
-    "build": "esbuild server.js --platform=node --bundle --minify --outfile=dist/server.js",
+    "server-dev": "node server.js",
+    "server-build": "esbuild server.js --platform=node --bundle --minify --outfile=dist/server.js",
+    "build": "bin/build",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
