--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vue/test-utils": "^2.3.0",
     "axios": "^1.4.0",
     "coffeebrew_vue_components": "https://github.com/coffeebrewapps/coffeebrew_vue_components.git#feature/v0.1.0",
+    "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
     "jsdom": "^21.1.0",
