--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-router": "^4.1.6"
   },
   "dependencies": {
+    "@hyfi06/html2pdf": "^1.2.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.3.0",
     "axios": "^1.4.0",
@@ -39,7 +40,6 @@
     "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
-    "html2pdf.js": "^0.10.1",
     "jsdom": "^21.1.0",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
