--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
     "jsdom": "^21.1.0",
+    "liquidjs": "^10.7.1",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
   }
