--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "vue-router": "^4.1.6"
   },
   "dependencies": {
-    "@hyfi06/html2pdf": "^1.2.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.3.0",
     "axios": "^1.4.0",
@@ -42,6 +41,8 @@
     "express": "^4.18.2",
     "jsdom": "^21.1.0",
     "liquidjs": "^10.7.1",
+    "puppeteer": "^20.3.0",
+    "uuid": "^9.0.0",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
   }
