Restructure server files

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "client-build": "vite build --emptyOutDir client",
     "client-preview": "vite preview client",
     "client-test:unit": "vitest client",
-    "server-dev": "DEBUG=express:* node server.js",
-    "server-build": "esbuild server.js server/modules/**/*.js --platform=node --bundle --minify --outdir=dist",
+    "server-dev": "DEBUG=express:* node server/index.js",
+    "server-build": "esbuild server/index.js server/modules/**/index.js --platform=node --bundle --minify --outdir=dist",
     "build": "bin/build",
     "package": "electron-forge package",
     "make": "electron-forge make"
