--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
+    "html2pdf.js": "^0.10.1",
     "jsdom": "^21.1.0",
     "liquidjs": "^10.7.1",
     "puppeteer": "^20.3.0",
