--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "create-vue": "^3.6.1",
     "electron": "^24.1.3",
     "esbuild": "^0.17.18",
-    "eslint": "^8.0.1",
+    "eslint": "^8.41.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.14.1",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
