--- a/app_config.json
+++ b/app_config.json
@@ -1,1 +1,1 @@
-{"port":"4001","dataStore":"fs","dataDir":"../data","logFile":"../debug.log","modulesDir":"./modules","schemas":"_schemas","indexes":"_indexes"}
+{"port":"4001","dataStore":"fs","dataDir":"../data","logFile":"../debug.log","uploadDir":"../uploads","modulesDir":"./modules","schemas":"_schemas","indexes":"_indexes"}
