--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html2pdf.js": "^0.10.1",
     "jsdom": "^21.1.0",
     "liquidjs": "^10.7.1",
+    "multer": "^1.4.5-lts.1",
     "puppeteer": "^20.3.0",
     "uuid": "^9.0.0",
     "vite": "^4.1.4",
