--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "client-test:unit": "vitest client",
     "server-dev": "DEBUG=express:* PORT=4001 node dev/server.js",
     "server-build": "esbuild server/index.js server/modules/**/index.js --platform=node --bundle --minify --outdir=dist",
+    "server-test:unit": "jest --watch server/__tests__",
     "build": "bin/build",
     "package": "electron-forge package",
     "make": "electron-forge make"
@@ -33,6 +34,7 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.14.1",
+    "jest": "^29.5.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
