--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-vue": "^9.14.1",
     "jest": "^29.5.0",
     "pinia": "^2.0.32",
+    "supertest": "^6.3.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
