--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "client-test:unit": "vitest client",
     "server-dev": "DEBUG=express:* PORT=4001 node dev/server.js",
     "server-build": "esbuild server/index.js server/modules/**/index.js --platform=node --bundle --minify --outdir=dist",
-    "server-test:unit": "jest --randomize --config server/jest.config.js server/__tests__",
-    "server-test:unit-watch": "jest --watch --randomize --config server/jest.config.js server/__tests__",
+    "server-test:unit": "jest --randomize --config server/jest.config.js server/__tests__/*.test.js server/__tests__/**/*.test.js",
+    "server-test:unit-watch": "jest --watch --randomize --config server/jest.config.js server/__tests__/*.test.js server/__tests__/**/*.test.js",
     "lib-build": "esbuild lib/src/**/*.js --platform=node --minify --format=esm --outdir=lib/dist",
     "build": "bin/build",
     "package": "electron-forge package",
