--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "server-test:unit": "jest --randomize --config server/jest.config.js server/__tests__/*.test.js server/__tests__/**/*.test.js",
     "server-test:unit-watch": "jest --watch --randomize --config server/jest.config.js server/__tests__/*.test.js server/__tests__/**/*.test.js",
     "lib-build": "esbuild lib/src/**/*.js --platform=node --minify --format=esm --outdir=lib/dist",
+    "lib-test:unit": "jest --randomize --config lib/jest.config.js lib/__tests__/*.test.js lib/__tests__/**/*.test.js",
+    "lib-test:unit-watch": "jest --watch --randomize --config lib/jest.config.js lib/__tests__/*.test.js lib/__tests__/**/*.test.js",
     "build": "bin/build",
     "package": "electron-forge package",
     "make": "electron-forge make"
