Client downloader test

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "client-dev": "vite client",
     "client-build": "vite build --emptyOutDir client",
     "client-preview": "vite preview client",
-    "client-test:unit": "vitest client",
+    "client-test:unit": "vitest client/__tests__ --config client/vitest.config.js",
+    "client-test:unit-watch": "vitest client/__tests__ --config client/vitest.config.js --watch",
     "server-dev": "DEBUG=express:* PORT=4001 node dev/server.js",
     "server-build": "esbuild server/index.js server/modules/**/index.js --platform=node --bundle --minify --outdir=dist",
     "server-test:unit": "jest --randomize --config server/jest.config.js server/__tests__/*.test.js server/__tests__/**/*.test.js",
