--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vitest": "^0.2.6",
     "eslint-plugin-vue": "^9.14.1",
     "jest": "^29.5.0",
     "pinia": "^2.0.32",
