--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "client-preview": "vite preview client",
     "client-test:unit": "vitest client/__tests__ --config client/vitest.config.js",
     "client-test:unit-watch": "vitest client/__tests__ --config client/vitest.config.js --watch",
+    "client-test:coverage-ui": "vitest client/__tests__ --coverage --ui --config client/vitest.config.js",
     "server-dev": "DEBUG=express:* PORT=4001 node dev/server.js",
     "server-build": "esbuild server/index.js server/modules/**/index.js --platform=node --bundle --minify --outdir=dist",
     "server-test:unit": "jest --randomize --config server/jest.config.js server/__tests__/*.test.js server/__tests__/**/*.test.js",
@@ -30,6 +31,8 @@
     "@electron-forge/maker-rpm": "^6.1.1",
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
+    "@vitest/coverage-istanbul": "^0.32.4",
+    "@vitest/ui": "^0.32.4",
     "create-vue": "^3.6.1",
     "electron": "^24.1.3",
     "esbuild": "^0.17.18",
