--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.4.0",
     "axios": "^1.4.0",
-    "coffeebrew-vue-components": "https://github.com/coffeebrewapps/coffeebrew_vue_components.git#feature/v0.1.0",
+    "coffeebrew-vue-components": "https://github.com/coffeebrewapps/coffeebrew_vue_components.git#v0.1.0",
     "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
